Open a test module to the framework that reflects over it
A test module no longer has to be declared open. When the tests run on the module
path, each package of the test module is opened to the modules the test framework
names through TestFramework.reflectingModules(), or to the unnamed module when
none of them is on the module path.